@@ -1,7 +1,7 @@
 Package: FLFishery
 Title: Classes and Methods for Simpler Fleet/Fishery Modelling
-Version: 0.1.5.9003
-Date: 2019-02-19
+Version: 0.1.6
+Date: 2019-02-28
 Authors@R: c(
   person("Iago", "Mosqueira", email = "iago.mosqueira@ec.europa.eu", role = c("cre", "aut")))
 Description: A set of classes and methods for modelling of fleet dynamics.
